istio/app-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: podcast-istio-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podcast-istio
spec:
  hosts:
  - "*"
  gateways:
  - podcast-istio-gateway
  http:
  - route:
    - destination:
        host: podcast-istio
